🦟 FIX: Spacing, placement and other small issues

--- a/30. blogr-landing-page/scss/blocks/_drop-down.scss
+++ b/30. blogr-landing-page/scss/blocks/_drop-down.scss
@@ -13,13 +13,19 @@
 	position: relative;
 }
 
+.clicky-menu li.login {
+	padding: 0 2rem;
+	display: grid;
+	place-content: center center;
+}
+
 .clicky-menu li > a.cta {
 	background-color: var(--clr-neutral-100);
 	color: var(--clr-primary-100);
 
 	&:hover {
-		background-color: var(var(--clr-primary-200));
-		color: var(var(--clr-neutral-100));
+		background-color: var(--clr-primary-200);
+		color: var(--clr-neutral-100);
 	}
 }
 
@@ -40,7 +46,6 @@
 	background-color: var(--clr-neutral-100);
 	border-radius: 0.25rem;
 	gap: 0.75rem;
-	// box-shadow: 0 20px 40px var(--clr-neutral-400);
 
 	li a {
 		text-align: left;
