--- a/30. blogr-landing-page/scss/blocks/_footer.scss
+++ b/30. blogr-landing-page/scss/blocks/_footer.scss
@@ -1,4 +1,5 @@
-footer {
+footer.footer {
+	grid-column: 1 / -1;
 	background-color: var(--clr-neutral-400);
 	padding-top: 4rem;
 	padding-bottom: 4rem;
@@ -13,7 +14,7 @@ footer {
 	}
 
 	a {
-		flex-basis: 25%;
+		flex-basis: 30%;
 	}
 
 	.inner-nav {
