--- a/30. blogr-landing-page/scss/global.scss
+++ b/30. blogr-landing-page/scss/global.scss
@@ -53,6 +53,9 @@ a {
 	}
 }
 
+footer {
+	grid-column: 1 / -1;
+}
 /* ==================================================
 	Utilities
 	================================================== */
