--- a/30. blogr-landing-page/scss/utilities/_flow-section.scss
+++ b/30. blogr-landing-page/scss/utilities/_flow-section.scss
@@ -4,6 +4,6 @@
 	margin-top: 3rem;
 
 	@include respond-to("medium") {
-		margin-top: 8rem;
+		margin-top: 4rem;
 	}
 }
